# openair-max

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  maxxx.cpp  partitions.csv  sdkconfig  sdkconfig 2  sdkconfig.old
.github/workflows/: idf.yml
components/ADS1115/: ADS1115.cpp  CMakeLists.txt
components/ADS1115/include/: ADS1115.h
components/AirgradientSerial/: AirgradientIICSerial.cpp  AirgradientSerial.cpp  AirgradientUART.cpp  CMakeLists.txt  DFRobot_IICSerial.cpp
components/AirgradientSerial/include/: AirgradientIICSerial.h  AirgradientSerial.h  AirgradientUART.h  DFRobot_IICSerial.h
components/BQ25672/: BQ25672.cpp  CMakeLists.txt
components/BQ25672/include/: BQ25672.h
components/PMS/: CMakeLists.txt  PMS.cpp
components/PMS/include/: PMS.h
components/Sunlight/: CMakeLists.txt  Sunlight.cpp
components/Sunlight/include/: Sunlight.h
components/UdpLogger/: CMakeLists.txt
components/UdpLogger/include/: UdpLogger.h
components/WiFiManager/: CMakeLists.txt
components/esp_sht4x/: sht4x.c
components/esp_type_utils/: CMakeLists.txt
main/: AlphaSenseSensor.cpp  AlphaSenseSensor.h  CMakeLists.txt  Configuration.cpp  Configuration.h  GasIndex.cpp  GasIndex.h  MaxConfig 2.h  MaxConfig.h  PayloadCache 2.cpp  PayloadCache 2.h  PayloadCache.cpp  PayloadCache.h  RemoteConfig.cpp  RemoteConfig.h  Sensor.cpp  Sensor.h  StatusLed 2.cpp  StatusLed 2.h  StatusLed.cpp  StatusLed.h  config.h  hello_world_main.c  idf_component.yml  main.cpp  max.cpp  secrets.h.example
vhub/: INTEGRATION.md  OpenAirMax.vhub.json
(+9 files in other folders)
